# ParCeEngine

./: .gitignore
.VSCodeCounter/2023-11-13_00-33-03/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Engine/: CMakeLists.txt  ParCe.cpp  ParCe.h  helperFunctions.h  main.cpp
Engine/Graphics/: Buffer.cpp  Buffer.h  CMakeCache.txt  Input.cpp  Input.h  Main.cpp  Makefile  Material.cpp  Material.h  OpenGL_LearningIMGUI  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  app.cpp  cmake_install.cmake  imgui.ini
Engine/Graphics/Entity/: AssMesh copy.cpp  AssMesh.cpp  AssMesh.h  AssModel.cpp  AssModel.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  EmptyObject.cpp  EmptyObject.h  Grid.cpp  Grid.h  Light.cpp  Light.h  Mesh.h  Model copy.cpp  Model.cpp  Model.h  PCamera.cpp  PCamera.h  PerspectiveGrid.cpp  PerspectiveGrid.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h  World.cpp  World.h
Engine/Graphics/Materials/: Armchair.mtl  Cube.mtl
Engine/Graphics/Shaders/: Default.frag  Default.vert  Light.frag  Light.vert
Engine/Graphics/Utilities/: Timer.h  Utility.cpp  Utility.h
Engine/Physics/: PBroadphase.cpp  PBroadphase.h  PCollisionDetect.cpp  PCollisionDetect.h  PImpactData.cpp  PImpactData.h  PParticle.cpp  PParticle.h  PRBDBody.cpp  PRBDBody.h  PRBDObject.cpp  PRBDObject.h  PRBDShape.cpp  PRBDShape.h  PRBDShapeConvex.cpp  PRBDShapeConvex.h  PRBDShapeCube.cpp  PRBDShapeCube.h  PRBDShapeSphere.cpp  PRBDShapeSphere.h
Engine/Physics/Forces/: PForces.cpp  PForces.h
Engine/Physics/Maths/: Core.h  PMat2.cpp  PMat2.h  PMat3.cpp  PMat3.h  PMat4.cpp  PMat4.h  PPoint.cpp  PPoint.h  PQuat.cpp  PQuat.h  PVec.h  PVec2.cpp  PVec2.h  PVec3.cpp  PVec3.h  PVec4.cpp  PVec4.h
Engine/Physics/Primitives/: PBounds.cpp  PBounds.h  PRay.cpp  PRay.h
Engine/Physics/Utilities/: Timer.cpp  Timer.h
Engine/vendors/glad/: glad.c  glad.h
Engine/vendors/imgui/backends/: imgui_impl_opengl3.cpp
